--- a/theme/assets/css/justedo.webflow.css
+++ b/theme/assets/css/justedo.webflow.css
@@ -4749,7 +4749,7 @@ figcaption {
   }
 
   .image-overlay-cta {
-    background-image: linear-gradient(to top, rgba(1, 30, 100, .9), rgba(1, 30, 100, .4));
+    background-image: linear-gradient(to top, rgba(7, 77, 255, 1), rgba(7, 77, 255, .4));
   }
 
   .heading-h1-home {
