--- a/theme/assets/css/justedo.webflow.css
+++ b/theme/assets/css/justedo.webflow.css
@@ -1521,7 +1521,7 @@ figcaption {
   letter-spacing: .01rem;
   font-family: Bitter, serif;
   font-size: 1.06rem;
-  line-height: 1.6;
+  line-height: 1.75;
 }
 
 .text-rich-text ul {
@@ -1529,14 +1529,14 @@ figcaption {
   padding-left: 1.5rem;
   font-family: Bitter, serif;
   font-size: 1.06rem;
-  line-height: 1.6;
+  line-height: 1.75;
 }
 
 .text-rich-text ol {
   letter-spacing: .01rem;
   padding-left: 1.5rem;
   font-family: Bitter, serif;
-  line-height: 1.6;
+  line-height: 1.75;
 }
 
 .text-rich-text figcaption {
@@ -2200,13 +2200,19 @@ figcaption {
 
 .layout350_tab-link {
   z-index: 2;
+  width: 16vw;
+  height: 16vw;
+  grid-column-gap: .5em;
+  grid-row-gap: .5em;
   color: rgba(0, 0, 0, 0);
   text-align: center;
-  background-color: rgba(1, 30, 100, .2);
-  border: 1px solid rgba(0, 0, 0, 0);
+  border: 1px rgba(0, 0, 0, 0);
+  flex-direction: column;
   flex: none;
-  padding: .5rem 1.25vw;
-  position: static;
+  align-items: flex-start;
+  padding: .75rem 1.25vw .5rem;
+  display: flex;
+  position: relative;
 }
 
 .layout350_tab-link:hover {
@@ -2217,6 +2223,48 @@ figcaption {
 .layout350_tab-link.w--current {
   color: #fff;
   border-color: rgba(0, 0, 0, 0);
+}
+
+.layout350_tab-link.bgc-1 {
+  max-width: 183.695em;
+  background-color: #58bcbe;
+}
+
+.layout350_tab-link.bgc-1:hover {
+  background-color: #418e90;
+}
+
+.layout350_tab-link.bgc-2 {
+  background-color: #fbbc96;
+}
+
+.layout350_tab-link.bgc-2:hover {
+  background-color: #c59171;
+}
+
+.layout350_tab-link.bgc-3 {
+  background-color: #cfa9d9;
+  justify-content: space-between;
+}
+
+.layout350_tab-link.bgc-3:hover {
+  background-color: #a382ac;
+}
+
+.layout350_tab-link.bgc-4 {
+  background-color: #f3e01a;
+}
+
+.layout350_tab-link.bgc-4:hover {
+  background-color: #b8aa17;
+}
+
+.layout350_tab-link.bgc-5 {
+  background-color: #a3afca;
+}
+
+.layout350_tab-link.bgc-5:hover {
+  background-color: #8791a8;
 }
 
 .layout350_content {
@@ -2260,6 +2308,7 @@ figcaption {
 .body {
   background-color: #c5d1e0;
   font-family: IBM Plex Sans, sans-serif;
+  line-height: 1.75;
 }
 
 .body.is-white {
@@ -3020,6 +3069,7 @@ figcaption {
 
 .text-size-medium-2 {
   font-size: 1.15rem;
+  line-height: 1.66;
 }
 
 .button-2 {
@@ -3741,8 +3791,29 @@ figcaption {
 }
 
 .tab-text {
+  color: #011e64;
+  text-align: left;
+  font-size: 1.4vw;
+  font-weight: 500;
+  line-height: 1.33;
+}
+
+.tab-text.text-color-blue {
+  color: #011e64;
+  font-size: .875em;
+  line-height: 1.33;
+}
+
+.tab-text.text-weight-bold {
+  text-align: left;
+}
+
+.tab-text.text-weight-xbold {
+  font-weight: 600;
+}
+
+.tab-text.text-weight-xbold.text-color-white, .tab-text.text-color-white {
   color: #fff;
-  font-size: .925rem;
 }
 
 .padding-section-xxsmall {
@@ -4357,13 +4428,13 @@ figcaption {
 .layout_tabs-menu {
   z-index: 2;
   width: auto;
-  grid-column-gap: .5rem;
-  grid-row-gap: .25rem;
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
   opacity: 1;
   mix-blend-mode: normal;
   object-fit: contain;
   border: 1px solid rgba(0, 0, 0, 0);
-  align-items: flex-end;
+  align-items: flex-start;
   margin-top: 4vw;
   padding: 0;
   display: flex;
@@ -4511,6 +4582,24 @@ figcaption {
   height: 100%;
 }
 
+.image-wrapper-small {
+  width: 6.5vw;
+  flex: none;
+  margin-top: auto;
+  margin-bottom: .5em;
+}
+
+.bgimage {
+  z-index: -1;
+  opacity: .85;
+  mix-blend-mode: lighten;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
 @media screen and (min-width: 1280px) {
   h1 {
     font-size: 5vw;
@@ -4628,6 +4717,7 @@ figcaption {
   .text-rich-text blockquote {
     background-color: #fff;
     font-size: 1.2rem;
+    line-height: 1.75;
   }
 
   .text-rich-text h3 {
@@ -4639,29 +4729,30 @@ figcaption {
   }
 
   .text-rich-text h6 {
-    font-size: 1.125rem;
+    font-size: 1.175rem;
+    line-height: 1.75;
   }
 
   .text-rich-text p {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
   }
 
   .text-rich-text ol {
     padding-left: 1.66rem;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
   }
 
   .text-rich-text a {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
   }
 
   .text-rich-text ul {
     padding-left: 1.4rem;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
   }
 
   .text-rich-text figcaption {
-    font-size: 1vw;
+    font-size: .925em;
   }
 
   .text-rich-text figure {
@@ -4777,7 +4868,8 @@ figcaption {
   }
 
   .tab-text {
-    font-size: 1.06vw;
+    font-size: 1.25vw;
+    line-height: 1.4;
   }
 
   .div-block-6.fade-in {
@@ -4932,6 +5024,10 @@ figcaption {
   .video-container1 {
     margin-top: -1rem;
     margin-bottom: -2rem;
+  }
+
+  .image-wrapper-small {
+    width: 7vw;
   }
 }
 
@@ -5443,11 +5539,19 @@ figcaption {
   }
 
   .layout350_tabs-menu {
-    grid-column-gap: .33rem;
-    grid-row-gap: .33rem;
+    grid-column-gap: .75rem;
+    grid-row-gap: .75rem;
     margin-top: 0;
     position: relative;
     top: auto;
+  }
+
+  .layout350_tab-link {
+    height: 18.5vw;
+  }
+
+  .layout350_tab-link.square {
+    height: 16vw;
   }
 
   .navbar14_button-wrapper_mob {
@@ -5771,7 +5875,7 @@ figcaption {
   }
 
   .tab-text {
-    font-size: 1.4vw;
+    font-size: 1.66vw;
   }
 
   .padding-section-xxsmall {
@@ -5959,7 +6063,8 @@ figcaption {
   }
 
   .layout_tabs-menu {
-    grid-column-gap: .33rem;
+    grid-column-gap: .75em;
+    grid-row-gap: .75em;
     position: relative;
     top: auto;
   }
@@ -6005,6 +6110,11 @@ figcaption {
 
   .embed-all {
     overflow: visible;
+  }
+
+  .image-wrapper-small {
+    width: 7.5vw;
+    margin-bottom: .125em;
   }
 }
 
@@ -6550,6 +6660,7 @@ figcaption {
   }
 
   .layout350_tab-link {
+    height: 22.5vw;
     padding: .33rem 2vw;
     font-size: .875rem;
   }
@@ -6560,6 +6671,10 @@ figcaption {
 
   .layout350_tab-link.w--current:hover {
     background-color: rgba(7, 77, 255, .5);
+  }
+
+  .layout350_tab-link.bgc-5 {
+    background-color: #a3afca;
   }
 
   .layout350_content {
@@ -6894,7 +7009,7 @@ figcaption {
   }
 
   .tab-text {
-    font-size: .875rem;
+    font-size: 2vw;
   }
 
   .padding-section-xxsmall {
@@ -7039,6 +7154,8 @@ figcaption {
   }
 
   .layout_tabs-menu {
+    grid-column-gap: .5em;
+    grid-row-gap: .5em;
     flex-wrap: wrap;
     display: flex;
     position: relative;
@@ -7078,6 +7195,10 @@ figcaption {
   .video-container1 {
     margin-top: 0;
     margin-bottom: -.5rem;
+  }
+
+  .image-wrapper-small {
+    margin-bottom: .5em;
   }
 }
 
@@ -7522,19 +7643,28 @@ figcaption {
 
   .layout350_tabs-menu {
     width: 100%;
-    grid-column-gap: .25rem;
-    grid-row-gap: .25rem;
+    height: 100%;
+    grid-column-gap: .75em;
+    grid-row-gap: .75em;
     grid-template-rows: auto auto;
     grid-template-columns: 1fr 1fr;
     grid-auto-columns: 1fr;
+    align-content: start;
     justify-content: flex-start;
-    display: grid;
+    justify-items: center;
+    display: none;
     overflow: hidden;
   }
 
   .layout350_tab-link {
+    width: 40vw;
+    height: 40vw;
     padding-left: 2vw;
     padding-right: 2vw;
+  }
+
+  .layout350_tab-link.square {
+    height: 40vw;
   }
 
   .layout350_content {
@@ -7718,6 +7848,10 @@ figcaption {
     padding-top: 2rem;
   }
 
+  .text-size-medium-2 {
+    line-height: 1.66;
+  }
+
   .max-width-large-2 {
     max-width: none;
     min-width: 280px;
@@ -7885,7 +8019,6 @@ figcaption {
   }
 
   .tab-text {
-    color: #fff;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -8102,6 +8235,12 @@ figcaption {
 
   .embed-all {
     display: none;
+  }
+
+  .bgimage {
+    width: 100%;
+    height: auto;
+    flex: 0 auto;
   }
 }
 
